--- a/src/main/resources/templates/usuarios/form.html
+++ b/src/main/resources/templates/usuarios/form.html
@@ -33,7 +33,7 @@
                 <label for="nombre" class="col-sm-2 col-form-label">Usuario</label>
                 <div class="col-sm-4">
                     <input type="text"
-                           th:field="*{usuario}"
+                           th:field="*{fiusuario}"
                            name="" class="form-control" id="nombre" placeholder="No. de empleado"/>
 
                 </div>
@@ -43,7 +43,7 @@
                 <label for="password" class="col-sm-2 col-form-label">Contrasena</label>
                 <div class="col-sm-4">
                     <input type="text"
-                           th:field="*{password}"
+                           th:field="*{fcpassword}"
                            name="" class="form-control" id="password" placeholder="Password"/>
                 </div>
             </div>
