--- a/src/main/resources/templates/usuarios/list.html
+++ b/src/main/resources/templates/usuarios/list.html
@@ -50,7 +50,7 @@
         </tr>
         <tr th:each="p : ${listarUsuarios}">
 
-            <td th:text="${p.usuario}"></td>
+            <td th:text="${p.fiusuario}"></td>
             <td th:text="${p.fcnombre}"></td>
 
 
