--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="utf-8">
@@ -29,13 +29,19 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" href="/">Home
-                <span class="sr-only">(current)</span>
+
+            <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')"><a class="nav-link" href="/">Home
+                </span>
             </a></li>
+
             <li class="nav-item" id="menu2"><a class="nav-link" href="/usuarios/list">Area Administrativa</a>
             </li>
+
             <li class="nav-item hide-icon d-none"><a class="nav-link" href="#">Menu3</a></li>
             </ul>
+        <div class="welcome">
+            <span sec:authorize="isAuthenticated()">Welcome <span sec:authentication="name"></span></span>
+        </div>
         <form th:action="@{/logout}" method="post">
             <button type="submit" class="btn btn-primary">Salir</button>
         </form>
