--- a/src/main/resources/templates/historico/list.html
+++ b/src/main/resources/templates/historico/list.html
@@ -27,7 +27,10 @@
     <br>
 
 
-    <form th:action="@{/historico/lists}" method="get">
+
+
+    <form th:action="@{/historico/lists}"
+          method="get">
         <div class="form-row">
             <div class="form-group row">
 
